<?xml version="1.0"?>
<package format="2">
  <name>depthimage_to_pointcloud2</name>
  <version>0.5.0</version>
  <description>A simple node to convert a depth image and camera info into a PointCloud2.</description>
  <license>Apache License 2.0</license>

  <maintainer email="hans324oh@gmail.com">Hyeonsu Oh</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>image_geometry</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
